--- a/public/css/single-drink.css
+++ b/public/css/single-drink.css
@@ -1,28 +1,23 @@
-.single-page-container {
-  min-height: 100vh;
-  min-width: 100vw;
-  background-color: var(--clr2);
-}
-
 .single-title {
   font-family: 'Roboto', sans-serif;
-  font-size: 3.25rem;
+  font-size: clamp(1.75rem, 3vw, 3rem);
   font-weight: 800;
   text-align: center;
   justify-content: center;
+  padding-top: 1.5rem;
 }
 
 .single-drink {
   display: flex;
-  flex-flow: column;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
 
   margin: auto;
   margin-top: 2rem;
+  background-color: hsla(0, 90%, 70%, 30%);
 
-  background-color: var(--clr4);
-  width: 35rem;
+  max-width: 60rem;
   border-radius: 16px;
   box-shadow: 6px 6px 29px -12px rgba(0, 0, 0, 0.63);
 }
@@ -30,57 +25,97 @@
 .single-image img {
   margin: 0;
   overflow: hidden;
-  width: 35rem;
-  height: 35rem;
+  width: 30rem;
+  height: 30rem;
   box-shadow: 6px 6px 29px -12px rgba(0, 0, 0, 0.63);
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
+  border-radius: 16px;
+  margin-top: 0.5rem;
 }
 
 .single-name {
   font-family: 'Monsterrat', sans-serif;
   font-weight: 500;
   font-size: 3rem;
+
+  transform: translateY(-103%);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 16px;
+
+  width: 30rem;
+  text-align: center;
+
+  margin-bottom: 0px;
 }
 
 .column {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  transform: translateY(-20%);
 }
 
 .baseAlcohol {
   display: flex;
   flex-flow: column wrap;
-  padding: 5px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  height: min-content;
 }
 
 .ingredients {
   display: flex;
   flex-flow: column wrap;
-  padding: 5px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  height: min-content;
 }
 
 .glassType {
   display: flex;
   flex-flow: column wrap;
-  padding: 5px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  height: min-content;
 }
 
 .recipe {
-  margin-top: 0.5rem;
+  padding: 0.5rem;
+  margin-top: 1.75rem;
+  margin-bottom: 0.5rem;
   display: flex;
   flex-flow: column wrap;
+  text-align: left;
+  min-width: 100%;
 }
 
 li {
   list-style-type: disc;
+  padding-top: 0.5rem;
+  font-family: 'Monsterrat', sans-serif;
+  font-size: 1.25rem;
 }
 
 h3 {
   font-family: 'Monsterrat', sans-serif;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.recipe {
+  transform: translateY(-20%);
+}
+
+.recipe p {
+  padding: 0.5rem;
+  text-align: center;
+}
+
+p {
+  font-family: 'Monsterrat', sans-serif;
+  font-size: 1.25rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .single-drink li {
