--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@
   --clr-error: hsla(0, 65%, 51%, 0.6);
 }
 
+/* Body color for overslow */
+body {
+  background-color: var(--clr2)
+}
+
 /* Header */
 .home-hero-image {
   position: absolute;
